updated slider styles to prevent wrapping images on new line before slider is initialized

--- a/client/public/assets/styles/app.css
+++ b/client/public/assets/styles/app.css
@@ -595,21 +595,21 @@ SLIDER
   /* height: 90vh; */
   height: 100%;
   display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+  /* display: -ms-flexbox;
+  display: flex; */
   -webkit-transition: all .5s ease;
   -o-transition: all .5s ease;
   transition: all .5s ease;
   /* new shiz for parallax  */
-   -webkit-box-orient: vertical;
+   /* -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
        -ms-flex-direction: column;
-           flex-direction: column;
-  -ms-flex-wrap: wrap;
+           flex-direction: column; */
+  /* -ms-flex-wrap: wrap;
       flex-wrap: wrap;
   -webkit-box-align: end;
       -ms-flex-align: end;
-          align-items: end;
+          align-items: end; */
 
 }
 
